# trace

./: .gitignore  CMakeLists.txt  README.md  plan.txt
examples/: bad_open.c  comprehensive_test.c  simple_fork.c  write_hello.c
helpers/: arm64_syscalls.txt  arm64_syscalls_formatted.txt  extract_syscalls.cpp
include/trace/: formatter.hpp  options.hpp  process.hpp  syscall.hpp  syscall_table.hpp  tracer.hpp  utils.hpp
src/: main.cpp  options.cpp  syscall.cpp  syscall_table.cpp  tracer.cpp  utils.cpp
